--- a/classe-01/index.html
+++ b/classe-01/index.html
@@ -13,7 +13,9 @@
 <body>
     <div class="content-wrapper">
         <div class="text-wrapper">
-            <p class="review-text">“Estive interessada em código por um tempo mas não tomava uma atitude, até agora. Não consigo recomendar esse curso o suficiente. Estou no trabalho dos meu sonhos e vejo um futuro brilhante!”</p>
+            <p class="review-text">“Estive interessada em código por um tempo mas não tomava uma atitude, até agora. Não
+                consigo recomendar esse curso o suficiente. Estou no trabalho dos meu sonhos e vejo um futuro
+                brilhante!”</p>
             <div class="author__content-wrapper">
                 <div class="author__name">Gabriela da Silva</div>
                 <div class="author__title">Desenvolvedora Fullstack</div>
@@ -25,8 +27,10 @@
                 <img src="./assets/gabriela.jpg" alt="bootcamp graduate" class="carousel__img">
             </div>
             <div class="carousel__btn-wrapper">
-                <button id="btn-prev" class="btn btn--previous" onclick="pessoaAnterior()"><img src="./assets/icon-prev.svg" alt="previous button"></button>
-                <button id="btn-next" class="btn btn--next" onclick="proximaPessoa()"><img src="./assets/icon-next.svg" alt="next button"></button>
+                <button id="btn-prev" class="btn btn--previous" onclick="pessoaAnterior()"><img
+                        src="./assets/icon-prev.svg" alt="previous button"></button>
+                <button id="btn-next" class="btn btn--next" onclick="proximaPessoa()"><img src="./assets/icon-next.svg"
+                        alt="next button"></button>
             </div>
         </div>
     </div>
@@ -44,6 +48,26 @@
         descricao: '“Se você quiser ter a melhor base possível, recomendo fazer este curso. A profundidade em que os instrutores entram é incrível. Agora me sinto muito confiante em começar como um desenvolvedor profissional.”',
         foto: './assets/joao.jpg'
     }];
+    function pessoaAnterior() {
+        const reviewText = document.querySelector('.review-text');
+        const authorName = document.querySelector('.author__name');
+        const authorTitle = document.querySelector('.author__title');
+        const carouselImg = document.querySelector('.carousel__img');
+        reviewText.textContent = pessoas[0].descricao;
+        authorName.textContent = pessoas[0].nome;
+        authorTitle.textContent = pessoas[0].profissao;
+        carouselImg.src = pessoas[0].foto;
+    }
+    function proximaPessoa() {
+        const reviewText = document.querySelector('.review-text');
+        const authorName = document.querySelector('.author__name');
+        const authorTitle = document.querySelector('.author__title');
+        const carouselImg = document.querySelector('.carousel__img');
+        reviewText.textContent = pessoas[1].descricao;
+        authorName.textContent = pessoas[1].nome;
+        authorTitle.textContent = pessoas[1].profissao;
+        carouselImg.src = pessoas[1].foto;
+    }
 </script>
 
 </html>
